# blitzly

./: .dvcignore  .gitignore  .pre-commit-config.yaml  404.html  Brewfile  Brewfile.lock.json  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  SECURITY.md  dvc.yaml  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sitemap.xml
.github/: changelog_config.json
.github/workflows/: auto-approve.yml  auto-merge.yml  build-docs.yml  checks-testing.yml  code-cov.yml  codeql.yml  deploy-package.yml  pr-title.yml  pre-commit.yml  release.yml  reset-develop.yml  testing.yml
CONTRIBUTING/: index.html
blitzly/: __init__.py  histogram.py  utils.py
blitzly/etc/: utils.py
blitzly/plots/: bar.py  dumbbell.py  histogram.py  matrix.py  scatter.py
docs/: CONTRIBUTING.md  README.md  histogram.md  utils.md
docs/plots/: bar.md  dumbbell.md  histogram.md  matrix.md  scatter.md  subplots.md
docs/stylesheets/: extra.css
examples/: playground.ipynb
plots/bar/: index.html
plots/dumbbell/: index.html
plots/histogram/: index.html
plots/matrix/: index.html
plots/scatter/: index.html
plots/subplots/: index.html
search/: search_index.json
src/blitzly/: subplots.py
src/blitzly/etc/: utils.py
src/blitzly/plots/: bar.py  dumbbell.py  histogram.py  matrix.py  scatter.py  slope.py
src/blitzly/subplots/: __init__.py  subplots.py
tests/: conftest.py  helper.py  test_histogram.py
tests/expected_figs/: utils.py
tests/expected_figs/bar/model_feature_importances/: expected_model_feature_importances_horizontal.joblib  expected_model_feature_importances_vertical.joblib
tests/expected_figs/bar/multi_chart/: 1d_numpy_with_error.joblib  2d_numpy_with_error.joblib  2d_numpy_with_error_highlighted.joblib
tests/expected_figs/binary_confusion_matrix/: valid_confusion_matrix.joblib
tests/expected_figs/dumbbell/simple_dumbbell/: expected_2d_numpy.joblib  expected_pandas.joblib
tests/expected_figs/histogram/simple_histogram/: 1d_numpy.joblib  2d_numpy.joblib
tests/expected_figs/json_strings/: simple_histogram_with_1d_numpy_pandas  simple_histogram_with_2d_numpy_pandas
tests/expected_figs/matrix/binary_confusion_matrix/: valid_confusion_matrix.joblib
tests/expected_figs/matrix/cramers_v_corr_matrix/: valid_cramers_v_corr_matrix_from_pandas.joblib
tests/expected_figs/matrix/pearson_corr_matrix/: valid_pearson_corr_matrix_from_pandas.joblib  valid_pearson_corr_matrix_without_label_with_size.joblib
tests/expected_figs/scatter/dimensionality_reduction/: expected_with_valid_values.joblib  expected_with_valid_values_2d.joblib  expected_with_valid_values_2d_tsne.joblib  expected_with_valid_values_3d.joblib
tests/expected_figs/scatter/multi_scatter/: expected_multi_scatter_with_valid_values.joblib  expected_multi_scatter_with_valid_values_size.joblib
tests/expected_figs/scatter/scatter_matrix/: expected_pandas_with_color.joblib  expected_pandas_without_color.joblib  expected_pandas_without_dims_with_size.joblib
tests/expected_figs/simple_histogram/: 1d_numpy_pandas.joblib  1d_numpy_pandas_fig.joblib  2d_numpy_pandas.joblib
tests/expected_figs/slope/simple_slope/: expected_2d_numpy.joblib  expected_pandas.joblib
tests/expected_figs/subplots/make_subplots/: expected_histogram_grid.joblib  expected_histogram_grid_axes_labels.joblib  expected_histogram_grid_filled_row.joblib  expected_histogram_grid_shared_axes.joblib  expected_histogram_grid_unequal_columns.joblib
tests/test_cases/: test_bar.py  test_dumbbell.py  test_histogram.py  test_matrix.py  test_scatter.py  test_slope.py  test_subplots.py  test_utils.py
utils/: index.html
