[tool.poetry]
name = "blitzly"
version = "0.2.0"
description = "Lightning-fast way to get plots with Plotly"
authors = ["Prem Srinivasan <prem.srinivasan@invia.de>, Christopher Lemke <christopher.lemke@invia.de>"]
packages = [{include = "blitzly"}]
readme = "docs/README.md"
documentation = ""
repository = "https://github.com/invia-flights/blitzly"
license = "BSD 3-Clause"

classifiers = [
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "python",
    "data science",
    "analytics",
    "plotly",
    "plotting",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
plotly = "5.11.0"
pandas = "1.5.2"
numpy = "1.23.5"
nbformat = "5.7.0"

[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
bandit = "^1.7.4"
isort = "^5.11.3"
mypy = "^0.991"
pre-commit = "^2.20.0"
pylint = "^2.15.9"
pytest = "^7.2.0"
nbstripout = "^0.6.1"
pytest-cov = "4.0.0"
joblib = "1.2.0"
pillow = "9.3.0"
kaleido = "0.2.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "1.4.2"
mkdocstrings = {extras = ["python"], version = "0.19.1"}
mkdocs-material = "8.5.11"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.docs]
optional = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "R0913",
    "R0914",
    "R0916",
    ]

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
no_namespace_packages = true
exclude = ["tests", "docs"]

[tool.pylint.format]
max-line-length = 88

[tool.isort]
profile = "black"
